# homework

./: .gitignore  Dockerfile  docker-compose-local.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/backend/: settings.py
fast_api/: main.py  settings.py  test_main.py
tests/: test_status.py
