[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Alone-elvi <alone.elvi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
mypy = "^1.7.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
